game/css/stylesheet.css
/* CSS is pretty basic so we'll comment it at the end */

body {

    margin: 0px;
    padding: 0px;
    overflow: hidden;
    position: relative;
    font-family: 'Press Start 2P', cursive;

}

#background {

    position: absolute;
    top: 0px;
    left: 0px;

    /* These two lines don't seem to have any effect
    They're probably being overwritten in some JS somewhere but it doesn't really matter */
    width: 10000px;
    height: 10000px;

}

#player {

    position: absolute;
    z-index: 10;

}

#playerId {

    position: fixed;
    z-index: 10;
    color: red;

}

.client {

    background-color: red;

}

.title {

    z-index: 11;
    position: fixed;
    width: 30%;
    background-color: darkgrey;
    border: 4px solid darkslategray;
    left: 50%;
    top: -4px;
    transform: translate(-50%, 0);
    text-align: center;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;

}

.button {

    border-style: solid;
    border-width: 4px;
    border-radius: 4px;
    border-color: darkslategrey;
    appearance: button;
    text-decoration: none;
    color: black;
    background-color: darkgrey;
    text-decoration: none;
    position: absolute;
    width: 100px;
    height: 30px;
    text-align: center;
    padding: 7px;
    top: 0%;
    position: fixed;
    margin: 5px;
    font-size: medium;

}

.button>h3 {

    transform: translate(0, -50%);

}

.bottom-bar {

    z-index: 11;
    position: fixed;
    bottom: -4px;
    left: 1vw;
    /* width doesnt work cause 100% is fucking huge on this page */
    width: 97vw;
    height: 12%;
    background-color: darkgrey;
    border: 4px solid darkslategray;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

#username {

    color: white;
    transform: translate(0, -50%);
    position: relative;
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: 30px;
    top: 50%;
}

